unpackaged/main/default/objects/CustomerProperty/CustomerProperty.object-meta.xml
<CustomObject>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>