unpackaged/main/default/objects/CustomerProperty/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Customer Properties</relationshipLabel>
    <relationshipName>Customer_Properties</relationshipName>
    <type>Lookup</type>
</CustomField>