unpackaged/main/default/objects/CustomerProperty/listViews/All_Customer_Properties.listView-meta.xml
<ListView>
    <fullName>All_Customer_Properties</fullName>
    <columns>Name</columns>
    <columns>RegistrationNumber</columns>
    <columns>ModelName</columns>
    <columns>Make</columns>
    <columns>MakeYear</columns>
    <columns>CreatedDate</columns>
    <filterScope>Everything</filterScope>
    <label>All Customer Properties</label>
</ListView>